syntax="proto3";

option csharp_namespace = "Shared.Protos";

package MathPackage;

message FactorialRequest {
	int32 number =1;
}

message FactorialResponse {
	int32 number =1;
	int64 result= 2 ;
}

message AverageNumbersRequest {
  int32 number=1;
}

message AverageNumbersResponse {
  float  result=1;
}

message SumNumbersRequest{
  int32 number=1;
}
message SumNumbersResponse{
  float  result=1;
}

service  MathService{
  rpc Factorial_ServerStreaming(FactorialRequest) returns (stream FactorialResponse);
  rpc Average_ClientStreaming(stream AverageNumbersRequest) returns (AverageNumbersResponse);
  rpc Sum_ClientServerBothStreaming(stream SumNumbersRequest) returns (stream SumNumbersResponse);
}

