syntax="proto3";
import "google/protobuf/wrappers.proto";

option csharp_namespace = "Shared.Protos";

package VideoPackage;

message ChunkRequest {
  bytes data = 1;
  int32 chunk_number=2;
  int32 total_chunks=3;
  string file_name=4;
}

message ChunkResponse {
  bool success = 1;
  int32 progress=3;
  //string message = 4;
  google.protobuf.StringValue message = 4;
  google.protobuf.Int32Value failed_chunk_number=5;
  google.protobuf.BytesValue failed_chunk_data = 6;
}

service VideoService{
  rpc UploadChunk(stream ChunkRequest) returns (stream ChunkResponse);
}

